2006-03-08  Eric Seidel  <eseidel@apple.com>

        Reviewed by darin.

        Partially fix JS on win32 by fixing hash table generation.

        * kjs/create_hash_table: limit << results to 32 bits.
        * kjs/testkjs.cpp:
        (TestFunctionImp::callAsFunction):

2006-03-07  Darin Adler  <darin@apple.com>

        * kxmlcore/Vector.h: Quick fix to try to get Windows compiling again.

2006-03-07  Darin Adler  <darin@apple.com>

        Reviewed by Anders.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=7655
          unwanted output while running layout tests

        * kjs/lexer.cpp: (Lexer::lex): Turn off the "yylex: ERROR" message.
        * kjs/regexp.cpp: (KJS::RegExp::RegExp): Remove the code to log errors from PCRE
        to standard output. I think we should arrange for the error text to be in JavaScript
        exceptions instead at some point.
        * kxmlcore/Vector.h: Add a check for overflow so that we'll abort if we pass a
        too-large size rather than allocating a buffer smaller than requested.

2006-03-06  David Carson <dacarson@gmail.com>

        Reviewed by Darin, landed by ap.

        - Fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=7582
        c_utility.cpp contains CFString OS X platform-dependent code; should use ICU

        Tested with test case from:
	http://bugzilla.opendarwin.org/show_bug.cgi?id=5163

        * bindings/c_utility.cpp
        (convertUTF8ToUTF16): Changed to using Unicode converter from ICU, and manual Latin-1 conversion.
        * icu/unicode/ucnv.h: Copied from WebCore.
        * icu/unicode/ucnv_err.h: Ditto.
        * icu/unicode/uenum.h: Ditto.

2006-03-05  Darin Adler  <darin@apple.com>

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: Updated.

2006-03-06  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Fix suggested by Alexey Proskuryakov <ap@nypop.com>, reviewed by Maciej and Hyatt.
        